Create end-to-end workflow for getting currency exchange rate using Fixer.io API

--- a/Currency/appsettings.Development.json
+++ b/Currency/appsettings.Development.json
@@ -1,4 +1,11 @@
 {
+  "ServiceType": {
+    "Name":  "FixerAPI"
+  },
+  "FixerAPI": {
+    "BaseUrl": "http://data.fixer.io/api/latest",
+    "AccessKey": "251f61fefc2ac472312a146108f50106"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
